<resources>
    <string name="app_name">June17</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="account_circle">Account</string>
    <string name="options">Options</string>
    <string name="more">More</string>
    <string name="analytics">Analytics</string>
    <string name="home_option">Home</string>
    <string name="login_link">Already have an account? Login Here</string>
    <string name="register_link">Do not have an account? Register Here</string>
    <string name="expense_name">Expense</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="note">Note (Optional)</string>
    <string name="logout_button">Log out</string>
    <string name="add_expense">Add Expense</string>
    <string name="update_expense">Update</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>