<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_option"
        android:icon="@drawable/home_24px"
        android:title="@string/home_option" />

    <item
        android:id="@+id/analytics_option"
        android:icon="@drawable/monitoring_24px"
        android:title="@string/analytics" />

    <item
        android:id="@+id/options_option"
        android:icon="@drawable/tune_24px"
        android:title="@string/options" />

    <item
        android:id="@+id/more_option"
        android:icon="@drawable/more_vert_24px"
        android:title="@string/more" />

    <item
        android:id="@+id/account_option"
        android:icon="@drawable/account_circle_24px"
        android:title="@string/account_circle" />
</menu>